# colcon-package-of

./: .gitignore  README.md  publish-python.yaml  setup.cfg  setup.py  stdeb.cfg
.github/workflows/: ci.yaml
colcon_package_of/: __init__.py
colcon_package_of/verb/: __init__.py  package_of.py
test/: spell_check.words  test_black.py  test_copyright_license.py  test_flake8.py  test_match_paths.py  test_spell_check.py
test/integration/: check_env.sh  do_git_commit.sh  requirements.in  requirements.txt  setup_colcon.sh  setup_mock_ws.sh  test_basic.t  test_git_diff.t  test_strict.t
